<resources>
    <string name="app_name">Whizz</string>
    <string name="title_home">Desk</string>
    <string name="title_dashboard">Quests</string>
    <string name="title_notifications">Notifications</string>
    <string name="Tulisan_Welcome">Selamat datang!!!</string>
    <string name="SpecialistRole">Role</string>
    <string name="GoldValue">0</string>
    <string name="Username">Username</string>
    <string name="LevelValue">10</string>
    <string name="QuestNumber">1</string>
    <string name="LoremIpsum">Lorem Ipsum Dolor SIt Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n
        Lorem Ipsum Dolor Sit Amet \n</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>