<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toEndOf="@+id/progressBar2"
        app:layout_constraintTop_toBottomOf="@+id/username4"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="128dp"
        android:layout_height="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/username4"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center|start"
        android:text="@string/Username"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LevelValue"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="@+id/progressBar2"
        app:layout_constraintStart_toStartOf="@+id/progressBar2"
        app:layout_constraintTop_toTopOf="@+id/progressBar2" />

    <TextView
        android:id="@+id/specialistPreview"
        android:layout_width="44dp"
        android:layout_height="35dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="123dp"
        android:gravity="center"
        android:text="@string/SpecialistRole"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/username4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/gold"
        android:layout_width="17dp"
        android:layout_height="18dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="191dp"
        android:layout_marginBottom="23dp"
        android:text="@string/GoldValue"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/specialistPreview" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showToast"
        android:text="Toast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="419dp"
        android:layout_height="352dp"
        android:layout_marginTop="164dp"
        android:background="@color/white_whizz"
        android:scrollbarStyle="insideOverlay"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="370dp"
            android:layout_height="349dp"
            android:text="@string/OngoingQuests"
            android:textColor="@color/purple_whizz"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationX="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/nav_host_fragment_activity_main"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/specialistPreview"
        app:layout_constraintStart_toEndOf="@+id/progressBar2"
        app:layout_constraintTop_toBottomOf="@+id/username4"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="431dp"
        android:layout_height="218dp"
        android:background="@color/white_whizz"
        android:text="TextView"
        tools:layout_editor_absoluteX="-10dp"
        tools:layout_editor_absoluteY="516dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="431dp"
        android:layout_height="218dp"
        android:background="@drawable/desk_rounded_menu_graphics"
        android:text="TextView"
        tools:layout_editor_absoluteX="-15dp"
        tools:layout_editor_absoluteY="409dp" />

</androidx.constraintlayout.widget.ConstraintLayout>